// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SupportPage should render empty main support page 1`] = `
<div>
  <div
    class="-m-5 bg-theme-neutral-200"
  >
    <div
      class="px-12 py-10 mb-10 bg-white"
    >
      <div
        class="flex"
      >
        <div
          class="w-2/3"
        >
          <h1>
            Help & Support
          </h1>
          <p
            class="text-theme-neutral-600"
          >
            Help & Support
          </p>
        </div>
        <div
          class="flex justify-end w-1/3"
        >
          <div
            class="my-auto cursor-pointer text-theme-primary-200"
          >
            <div
              class="sc-AxiKw dzBdqj"
              height="1em"
              width="1em"
            >
              <svg>
                search.svg
              </svg>
            </div>
          </div>
          <div
            class="h-8 mx-10 my-auto border-l border-1 border-theme-primary-100"
          />
          <div
            class="my-auto"
          >
            <button
              class="sc-AxjAm ddQVWI"
              color="primary"
              type="button"
            >
              Contact us
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="px-12 py-10 mb-10 bg-white"
    >
      <div
        class="flex flex-row"
      />
    </div>
    <div
      class="px-12 py-10 mb-10 bg-white"
    >
      <div
        class="flex flex-row"
      >
        <div
          class="w-1/3 mr-10"
        >
          <h3>
            Most Helpful
          </h3>
          <ul />
        </div>
        <div
          class="w-1/3 mr-10"
        >
          <h3>
            Most Popular
          </h3>
          <ul />
        </div>
        <div
          class="w-1/3 mr-10"
        >
          <h3>
            Newest
          </h3>
          <ul />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SupportPage should render main support page with categories 1`] = `
<div>
  <div
    class="-m-5 bg-theme-neutral-200"
  >
    <div
      class="px-12 py-10 mb-10 bg-white"
    >
      <div
        class="flex"
      >
        <div
          class="w-2/3"
        >
          <h1>
            Help & Support
          </h1>
          <p
            class="text-theme-neutral-600"
          >
            Help & Support
          </p>
        </div>
        <div
          class="flex justify-end w-1/3"
        >
          <div
            class="my-auto cursor-pointer text-theme-primary-200"
          >
            <div
              class="sc-AxiKw dzBdqj"
              height="1em"
              width="1em"
            >
              <svg>
                search.svg
              </svg>
            </div>
          </div>
          <div
            class="h-8 mx-10 my-auto border-l border-1 border-theme-primary-100"
          />
          <div
            class="my-auto"
          >
            <button
              class="sc-AxjAm ddQVWI"
              color="primary"
              type="button"
            >
              Contact us
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="px-12 py-10 mb-10 bg-white"
    >
      <div
        class="flex flex-row"
      >
        <a
          class="flex flex-row w-64 p-4 bg-white cursor-pointer border-r-1 last:border-r-0 border-theme-neutral-200 hover:shadow-xl"
          title="Profile"
        >
          <div
            class="w-1/3 my-auto"
          >
            <div
              class="sc-AxirZ cZokSJ border-theme-neutral-800"
            >
              <div
                class="text-theme-neutral-800"
              >
                <div
                  class="sc-AxiKw fFXzuz"
                  height="22"
                  width="22"
                >
                  <svg>
                    user.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
          <div
            class="flex-auto my-auto"
          >
            <div
              class="font-bold text-theme-neutral-800"
            >
              Profile
            </div>
            <div
              class="text-sm text-theme-neutral-500"
            >
              38 topics
            </div>
          </div>
        </a>
        <a
          class="flex flex-row w-64 p-4 bg-white cursor-pointer border-r-1 last:border-r-0 border-theme-neutral-200 hover:shadow-xl"
          title="Portfolio"
        >
          <div
            class="w-1/3 my-auto"
          >
            <div
              class="sc-AxirZ cZokSJ border-theme-neutral-800"
            >
              <div
                class="text-theme-neutral-800"
              >
                <div
                  class="sc-AxiKw fFXzuz"
                  height="22"
                  width="22"
                />
              </div>
            </div>
          </div>
          <div
            class="flex-auto my-auto"
          >
            <div
              class="font-bold text-theme-neutral-800"
            >
              Portfolio
            </div>
            <div
              class="text-sm text-theme-neutral-500"
            >
              9 topics
            </div>
          </div>
        </a>
        <a
          class="flex flex-row w-64 p-4 bg-white cursor-pointer border-r-1 last:border-r-0 border-theme-neutral-200 hover:shadow-xl"
          title="Plugins"
        >
          <div
            class="w-1/3 my-auto"
          >
            <div
              class="sc-AxirZ cZokSJ border-theme-neutral-800"
            >
              <div
                class="text-theme-neutral-800"
              >
                <div
                  class="sc-AxiKw fFXzuz"
                  height="22"
                  width="22"
                >
                  <svg>
                    plugin.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
          <div
            class="flex-auto my-auto"
          >
            <div
              class="font-bold text-theme-neutral-800"
            >
              Plugins
            </div>
            <div
              class="text-sm text-theme-neutral-500"
            >
              106 topics
            </div>
          </div>
        </a>
        <a
          class="flex flex-row w-64 p-4 bg-white cursor-pointer border-r-1 last:border-r-0 border-theme-neutral-200 hover:shadow-xl"
          title="Exchanges"
        >
          <div
            class="w-1/3 my-auto"
          >
            <div
              class="sc-AxirZ cZokSJ border-theme-neutral-800"
            >
              <div
                class="text-theme-neutral-800"
              >
                <div
                  class="sc-AxiKw fFXzuz"
                  height="22"
                  width="22"
                />
              </div>
            </div>
          </div>
          <div
            class="flex-auto my-auto"
          >
            <div
              class="font-bold text-theme-neutral-800"
            >
              Exchanges
            </div>
            <div
              class="text-sm text-theme-neutral-500"
            >
              28 topics
            </div>
          </div>
        </a>
      </div>
    </div>
    <div
      class="px-12 py-10 mb-10 bg-white"
    >
      <div
        class="flex flex-row"
      >
        <div
          class="w-1/3 mr-10"
        >
          <h3>
            Most Helpful
          </h3>
          <ul />
        </div>
        <div
          class="w-1/3 mr-10"
        >
          <h3>
            Most Popular
          </h3>
          <ul />
        </div>
        <div
          class="w-1/3 mr-10"
        >
          <h3>
            Newest
          </h3>
          <ul />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SupportPage should render main support page with helpful articles 1`] = `
<div>
  <div
    class="-m-5 bg-theme-neutral-200"
  >
    <div
      class="px-12 py-10 mb-10 bg-white"
    >
      <div
        class="flex"
      >
        <div
          class="w-2/3"
        >
          <h1>
            Help & Support
          </h1>
          <p
            class="text-theme-neutral-600"
          >
            Help & Support
          </p>
        </div>
        <div
          class="flex justify-end w-1/3"
        >
          <div
            class="my-auto cursor-pointer text-theme-primary-200"
          >
            <div
              class="sc-AxiKw dzBdqj"
              height="1em"
              width="1em"
            >
              <svg>
                search.svg
              </svg>
            </div>
          </div>
          <div
            class="h-8 mx-10 my-auto border-l border-1 border-theme-primary-100"
          />
          <div
            class="my-auto"
          >
            <button
              class="sc-AxjAm ddQVWI"
              color="primary"
              type="button"
            >
              Contact us
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="px-12 py-10 mb-10 bg-white"
    >
      <div
        class="flex flex-row"
      />
    </div>
    <div
      class="px-12 py-10 mb-10 bg-white"
    >
      <div
        class="flex flex-row"
      >
        <div
          class="w-1/3 mr-10"
        >
          <h3>
            Most Helpful
          </h3>
          <ul>
            <li
              class="flex border-dotted cursor-pointer border-b-1 border-theme-neutral-300 last:border-b-0"
            >
              <a
                class="flex w-full px-2 py-6 -mx-2 border-2 border-theme-background hover:bg-theme-primary-100"
                href="/"
                title="How to register an account?"
              >
                <div>
                  <div
                    class="pt-1 text-theme-neutral-800"
                  >
                    <div
                      class="sc-AxiKw fFXzuz"
                      height="22"
                      width="22"
                    >
                      <svg>
                        file-password.svg
                      </svg>
                    </div>
                  </div>
                </div>
                <div
                  class="ml-3 text-theme-neutral-800"
                >
                  How to register an account?
                </div>
              </a>
            </li>
            <li
              class="flex border-dotted cursor-pointer border-b-1 border-theme-neutral-300 last:border-b-0"
            >
              <a
                class="flex w-full px-2 py-6 -mx-2 border-2 border-theme-background hover:bg-theme-primary-100"
                href="/"
                title="How to enter your account"
              >
                <div>
                  <div
                    class="pt-1 text-theme-neutral-800"
                  >
                    <div
                      class="sc-AxiKw fFXzuz"
                      height="22"
                      width="22"
                    >
                      <svg>
                        file-password.svg
                      </svg>
                    </div>
                  </div>
                </div>
                <div
                  class="ml-3 text-theme-neutral-800"
                >
                  How to enter your account
                </div>
              </a>
            </li>
            <li
              class="flex border-dotted cursor-pointer border-b-1 border-theme-neutral-300 last:border-b-0"
            >
              <a
                class="flex w-full px-2 py-6 -mx-2 border-2 border-theme-background hover:bg-theme-primary-100"
                href="/"
                title="How can I change my personal data if I do not have access to my account (forgot my password) and to my mail?"
              >
                <div>
                  <div
                    class="pt-1 text-theme-neutral-800"
                  >
                    <div
                      class="sc-AxiKw fFXzuz"
                      height="22"
                      width="22"
                    >
                      <svg>
                        file-password.svg
                      </svg>
                    </div>
                  </div>
                </div>
                <div
                  class="ml-3 text-theme-neutral-800"
                >
                  How can I change my personal data if I do not have access to my account (forgot my password) and to my mail?
                </div>
              </a>
            </li>
            <li
              class="flex border-dotted cursor-pointer border-b-1 border-theme-neutral-300 last:border-b-0"
            >
              <a
                class="flex w-full px-2 py-6 -mx-2 border-2 border-theme-background hover:bg-theme-primary-100"
                href="/"
                title="If you need to make changes to the data entered during the passage of verification, where to apply, how to issue a request?"
              >
                <div>
                  <div
                    class="pt-1 text-theme-neutral-800"
                  >
                    <div
                      class="sc-AxiKw fFXzuz"
                      height="22"
                      width="22"
                    >
                      <svg>
                        file-password.svg
                      </svg>
                    </div>
                  </div>
                </div>
                <div
                  class="ml-3 text-theme-neutral-800"
                >
                  If you need to make changes to the data entered during the passage of verification, where to apply, how to issue a request?
                </div>
              </a>
            </li>
            <li
              class="flex border-dotted cursor-pointer border-b-1 border-theme-neutral-300 last:border-b-0"
            >
              <a
                class="flex w-full px-2 py-6 -mx-2 border-2 border-theme-background hover:bg-theme-primary-100"
                href="/"
                title="Can I delete my account"
              >
                <div>
                  <div
                    class="pt-1 text-theme-neutral-800"
                  >
                    <div
                      class="sc-AxiKw fFXzuz"
                      height="22"
                      width="22"
                    >
                      <svg>
                        file-password.svg
                      </svg>
                    </div>
                  </div>
                </div>
                <div
                  class="ml-3 text-theme-neutral-800"
                >
                  Can I delete my account
                </div>
              </a>
            </li>
          </ul>
        </div>
        <div
          class="w-1/3 mr-10"
        >
          <h3>
            Most Popular
          </h3>
          <ul />
        </div>
        <div
          class="w-1/3 mr-10"
        >
          <h3>
            Newest
          </h3>
          <ul />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SupportPage should render main support page with newest articles 1`] = `
<div>
  <div
    class="-m-5 bg-theme-neutral-200"
  >
    <div
      class="px-12 py-10 mb-10 bg-white"
    >
      <div
        class="flex"
      >
        <div
          class="w-2/3"
        >
          <h1>
            Help & Support
          </h1>
          <p
            class="text-theme-neutral-600"
          >
            Help & Support
          </p>
        </div>
        <div
          class="flex justify-end w-1/3"
        >
          <div
            class="my-auto cursor-pointer text-theme-primary-200"
          >
            <div
              class="sc-AxiKw dzBdqj"
              height="1em"
              width="1em"
            >
              <svg>
                search.svg
              </svg>
            </div>
          </div>
          <div
            class="h-8 mx-10 my-auto border-l border-1 border-theme-primary-100"
          />
          <div
            class="my-auto"
          >
            <button
              class="sc-AxjAm ddQVWI"
              color="primary"
              type="button"
            >
              Contact us
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="px-12 py-10 mb-10 bg-white"
    >
      <div
        class="flex flex-row"
      />
    </div>
    <div
      class="px-12 py-10 mb-10 bg-white"
    >
      <div
        class="flex flex-row"
      >
        <div
          class="w-1/3 mr-10"
        >
          <h3>
            Most Helpful
          </h3>
          <ul />
        </div>
        <div
          class="w-1/3 mr-10"
        >
          <h3>
            Most Popular
          </h3>
          <ul />
        </div>
        <div
          class="w-1/3 mr-10"
        >
          <h3>
            Newest
          </h3>
          <ul>
            <li
              class="flex border-dotted cursor-pointer border-b-1 border-theme-neutral-300 last:border-b-0"
            >
              <a
                class="flex w-full px-2 py-6 -mx-2 border-2 border-theme-background hover:bg-theme-primary-100"
                href="/"
                title="How to withdraw from wallet"
              >
                <div>
                  <div
                    class="pt-1 text-theme-neutral-800"
                  >
                    <div
                      class="sc-AxiKw fFXzuz"
                      height="22"
                      width="22"
                    >
                      <svg>
                        file-password.svg
                      </svg>
                    </div>
                  </div>
                </div>
                <div
                  class="ml-3 text-theme-neutral-800"
                >
                  How to withdraw from wallet
                </div>
              </a>
            </li>
            <li
              class="flex border-dotted cursor-pointer border-b-1 border-theme-neutral-300 last:border-b-0"
            >
              <a
                class="flex w-full px-2 py-6 -mx-2 border-2 border-theme-background hover:bg-theme-primary-100"
                href="/"
                title="How to Make Internal Transfer within wallet"
              >
                <div>
                  <div
                    class="pt-1 text-theme-neutral-800"
                  >
                    <div
                      class="sc-AxiKw fFXzuz"
                      height="22"
                      width="22"
                    >
                      <svg>
                        file-password.svg
                      </svg>
                    </div>
                  </div>
                </div>
                <div
                  class="ml-3 text-theme-neutral-800"
                >
                  How to Make Internal Transfer within wallet
                </div>
              </a>
            </li>
            <li
              class="flex border-dotted cursor-pointer border-b-1 border-theme-neutral-300 last:border-b-0"
            >
              <a
                class="flex w-full px-2 py-6 -mx-2 border-2 border-theme-background hover:bg-theme-primary-100"
                href="/"
                title="Missing Withdrawals"
              >
                <div>
                  <div
                    class="pt-1 text-theme-neutral-800"
                  >
                    <div
                      class="sc-AxiKw fFXzuz"
                      height="22"
                      width="22"
                    >
                      <svg>
                        file-password.svg
                      </svg>
                    </div>
                  </div>
                </div>
                <div
                  class="ml-3 text-theme-neutral-800"
                >
                  Missing Withdrawals
                </div>
              </a>
            </li>
            <li
              class="flex border-dotted cursor-pointer border-b-1 border-theme-neutral-300 last:border-b-0"
            >
              <a
                class="flex w-full px-2 py-6 -mx-2 border-2 border-theme-background hover:bg-theme-primary-100"
                href="/"
                title="Withdrawal to a Wrong Address"
              >
                <div>
                  <div
                    class="pt-1 text-theme-neutral-800"
                  >
                    <div
                      class="sc-AxiKw fFXzuz"
                      height="22"
                      width="22"
                    >
                      <svg>
                        file-password.svg
                      </svg>
                    </div>
                  </div>
                </div>
                <div
                  class="ml-3 text-theme-neutral-800"
                >
                  Withdrawal to a Wrong Address
                </div>
              </a>
            </li>
            <li
              class="flex border-dotted cursor-pointer border-b-1 border-theme-neutral-300 last:border-b-0"
            >
              <a
                class="flex w-full px-2 py-6 -mx-2 border-2 border-theme-background hover:bg-theme-primary-100"
                href="/"
                title="How to Resume the Withdrawal Function"
              >
                <div>
                  <div
                    class="pt-1 text-theme-neutral-800"
                  >
                    <div
                      class="sc-AxiKw fFXzuz"
                      height="22"
                      width="22"
                    >
                      <svg>
                        file-password.svg
                      </svg>
                    </div>
                  </div>
                </div>
                <div
                  class="ml-3 text-theme-neutral-800"
                >
                  How to Resume the Withdrawal Function
                </div>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SupportPage should render main support page with popular articles 1`] = `
<div>
  <div
    class="-m-5 bg-theme-neutral-200"
  >
    <div
      class="px-12 py-10 mb-10 bg-white"
    >
      <div
        class="flex"
      >
        <div
          class="w-2/3"
        >
          <h1>
            Help & Support
          </h1>
          <p
            class="text-theme-neutral-600"
          >
            Help & Support
          </p>
        </div>
        <div
          class="flex justify-end w-1/3"
        >
          <div
            class="my-auto cursor-pointer text-theme-primary-200"
          >
            <div
              class="sc-AxiKw dzBdqj"
              height="1em"
              width="1em"
            >
              <svg>
                search.svg
              </svg>
            </div>
          </div>
          <div
            class="h-8 mx-10 my-auto border-l border-1 border-theme-primary-100"
          />
          <div
            class="my-auto"
          >
            <button
              class="sc-AxjAm ddQVWI"
              color="primary"
              type="button"
            >
              Contact us
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="px-12 py-10 mb-10 bg-white"
    >
      <div
        class="flex flex-row"
      />
    </div>
    <div
      class="px-12 py-10 mb-10 bg-white"
    >
      <div
        class="flex flex-row"
      >
        <div
          class="w-1/3 mr-10"
        >
          <h3>
            Most Helpful
          </h3>
          <ul />
        </div>
        <div
          class="w-1/3 mr-10"
        >
          <h3>
            Most Popular
          </h3>
          <ul>
            <li
              class="flex border-dotted cursor-pointer border-b-1 border-theme-neutral-300 last:border-b-0"
            >
              <a
                class="flex w-full px-2 py-6 -mx-2 border-2 border-theme-background hover:bg-theme-primary-100"
                href="/"
                title="How to delete YubiKey for Two-factor Authentication (2FA)"
              >
                <div>
                  <div
                    class="pt-1 text-theme-neutral-800"
                  >
                    <div
                      class="sc-AxiKw fFXzuz"
                      height="22"
                      width="22"
                    >
                      <svg>
                        file-password.svg
                      </svg>
                    </div>
                  </div>
                </div>
                <div
                  class="ml-3 text-theme-neutral-800"
                >
                  How to delete YubiKey for Two-factor Authentication (2FA)
                </div>
              </a>
            </li>
            <li
              class="flex border-dotted cursor-pointer border-b-1 border-theme-neutral-300 last:border-b-0"
            >
              <a
                class="flex w-full px-2 py-6 -mx-2 border-2 border-theme-background hover:bg-theme-primary-100"
                href="/"
                title="Using a YubiKey for Two-Factor Authentication (2FA)"
              >
                <div>
                  <div
                    class="pt-1 text-theme-neutral-800"
                  >
                    <div
                      class="sc-AxiKw fFXzuz"
                      height="22"
                      width="22"
                    >
                      <svg>
                        file-password.svg
                      </svg>
                    </div>
                  </div>
                </div>
                <div
                  class="ml-3 text-theme-neutral-800"
                >
                  Using a YubiKey for Two-Factor Authentication (2FA)
                </div>
              </a>
            </li>
            <li
              class="flex border-dotted cursor-pointer border-b-1 border-theme-neutral-300 last:border-b-0"
            >
              <a
                class="flex w-full px-2 py-6 -mx-2 border-2 border-theme-background hover:bg-theme-primary-100"
                href="/"
                title="2FA Code Error"
              >
                <div>
                  <div
                    class="pt-1 text-theme-neutral-800"
                  >
                    <div
                      class="sc-AxiKw fFXzuz"
                      height="22"
                      width="22"
                    >
                      <svg>
                        file-password.svg
                      </svg>
                    </div>
                  </div>
                </div>
                <div
                  class="ml-3 text-theme-neutral-800"
                >
                  2FA Code Error
                </div>
              </a>
            </li>
            <li
              class="flex border-dotted cursor-pointer border-b-1 border-theme-neutral-300 last:border-b-0"
            >
              <a
                class="flex w-full px-2 py-6 -mx-2 border-2 border-theme-background hover:bg-theme-primary-100"
                href="/"
                title="How to Reset SMS Authentication"
              >
                <div>
                  <div
                    class="pt-1 text-theme-neutral-800"
                  >
                    <div
                      class="sc-AxiKw fFXzuz"
                      height="22"
                      width="22"
                    >
                      <svg>
                        file-password.svg
                      </svg>
                    </div>
                  </div>
                </div>
                <div
                  class="ml-3 text-theme-neutral-800"
                >
                  How to Reset SMS Authentication
                </div>
              </a>
            </li>
            <li
              class="flex border-dotted cursor-pointer border-b-1 border-theme-neutral-300 last:border-b-0"
            >
              <a
                class="flex w-full px-2 py-6 -mx-2 border-2 border-theme-background hover:bg-theme-primary-100"
                href="/"
                title="Supported SMS countries Not Receiving SMS Auth Codes"
              >
                <div>
                  <div
                    class="pt-1 text-theme-neutral-800"
                  >
                    <div
                      class="sc-AxiKw fFXzuz"
                      height="22"
                      width="22"
                    >
                      <svg>
                        file-password.svg
                      </svg>
                    </div>
                  </div>
                </div>
                <div
                  class="ml-3 text-theme-neutral-800"
                >
                  Supported SMS countries Not Receiving SMS Auth Codes
                </div>
              </a>
            </li>
          </ul>
        </div>
        <div
          class="w-1/3 mr-10"
        >
          <h3>
            Newest
          </h3>
          <ul />
        </div>
      </div>
    </div>
  </div>
</div>
`;
